--- a/home/src/app/dashboard/shared/layout/header/header.component.html
+++ b/home/src/app/dashboard/shared/layout/header/header.component.html
@@ -1,5 +1,8 @@
-
+<div>
 <header class="header">
   <img  src="assets/logo3.png" alt="logo santander" width="164px" height="auto">
+  <button  class="post" (click)='rota()'>Post</button>
+  <button  class="home"  (click)='rota2()' >Home</button>
 </header>
 
+</div>
